@@ -364,5 +364,12 @@ pybsddb_doc/>`__ --
                     'Topic :: Database',
                     'Topic :: Software Development',
                     'Topic :: System :: Clustering',
+                    'Programming Language :: Python :: 2',
+                    'Programming Language :: Python :: 2.3',
+                    'Programming Language :: Python :: 2.4',
+                    'Programming Language :: Python :: 2.5',
+                    'Programming Language :: Python :: 2.6',
+                    'Programming Language :: Python :: 3',
+                    'Programming Language :: Python :: 3.0',
                     ],
       )
