@@ -2,6 +2,8 @@
   * Under Python 3.0, "bsddb.db.DB_VERSION_STRING",
     "bsddb.db.__version__" and "bsddb.db.cvsid" must
     return (unicode) strings instead of bytes. Solved.
+  * Use the new (20081018) trove classifiers in PyPI
+    to identify Python supported versions.
 
 4.7.3: (Python 2.6 release. First release with Python 3.0 support)
   * "private" is a keyword in C++.  (Duncan Grisby)
